tests/fixtures/semantic/invalid/unknown-symbol.ck
module app.bad

fn f() -> String {
  return unknownName
}
